04-kubernetes/k8s/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: devops-lab
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 3000
