04-kubernetes/k8s/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: devops-lab
spec:
  rules:
    - host: devops-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
